[gd_scene load_steps=5 format=3 uid="uid://0kxk3j26oypq"]

[ext_resource type="Script" path="res://Scripts/Spawn_Cow.gd" id="1_wu8kd"]

[sub_resource type="QuadMesh" id="QuadMesh_wfgrm"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wmeph"]
size = Vector2(1, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lnvsk"]
size = Vector2(20, 9)

[node name="Button" type="Area2D"]
z_index = -3
position = Vector2(60, 100)
script = ExtResource("1_wu8kd")

[node name="MeshInstance2D" type="MeshInstance2D" parent="."]
position = Vector2(1.90735e-06, 8.49999)
scale = Vector2(20, 5)
mesh = SubResource("QuadMesh_wfgrm")

[node name="StaticBody2D" type="StaticBody2D" parent="MeshInstance2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="MeshInstance2D/StaticBody2D"]
position = Vector2(0, 1.90735e-06)
shape = SubResource("RectangleShape2D_wmeph")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 6.5)
shape = SubResource("RectangleShape2D_lnvsk")

[node name="SpawnPoint" type="Node2D" parent="."]
unique_name_in_owner = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
